# staratlas-programs

./: .env.sample  .gitignore  Cargo.toml  NOTES.md  README.md  package.json
common/core/: Cargo.toml
common/core/src/: lib.rs
crates/sage-sdk/: Cargo.toml
crates/sage-sdk/src/admin/: create_game.rs
crates/starbased-sdk/: Cargo.toml
crates/starbased-sdk/src/: lib.rs
crates/starbased-sdk/src/admin/: activate_game_state.rs  create_game.rs  create_game_state.rs  mod.rs  register_sector.rs  register_starbase.rs
crates/starbased-sdk/src/profile/: create_profile.rs
data/: galaxy.json
examples/: fleet-rentals-01.rs  fleet-rentals-02.rs  player-profile-names.rs  snapshot.rs  watch.rs
galactic-rs/sage-game/: Cargo.toml  README.md
galactic-rs/sage-game/examples/: parse.rs  watch.rs
galactic-rs/sage-game/src/: host.rs
galactic-rs/sage-spacetime/: README.md  justfile
galactic-rs/sage-spacetime/client/: Cargo.toml
galactic-rs/sage-spacetime/client/src/: main.rs
galactic-rs/sage-spacetime/client/src/module_bindings/: config_type.rs  filter_fleet_pos_table.rs  fleet_state_type.rs  fleet_table.rs  fleet_warping_table.rs  message_type.rs  mod.rs  move_subwarp_type.rs  player_viewport_table.rs  sage_fleet_pos_type.rs  sage_fleet_state_type.rs  sage_fleet_type.rs  set_player_viewport_reducer.rs  update_config_slot_reducer.rs
galactic-rs/sage-spacetime/game/: Cargo.toml
galactic-rs/sage-spacetime/game/src/: main.rs
galactic-rs/sage-spacetime/game/src/module_bindings/: client_table.rs  client_type.rs  fleet_pos_table.rs  idle_type.rs  mod.rs  move_subwarp_type.rs  sage_fleet_warping_type.rs  update_fleet_reducer.rs  update_fleet_state_reducer.rs
galactic-rs/sage-spacetime/relay/: Cargo.toml
galactic-rs/sage-spacetime/relay/src/: lib.rs  main.rs
galactic-rs/sage-spacetime/relay/src/module_bindings/: debug_reducer.rs  fleet_state_table.rs  logged_out_client_table.rs  mod.rs  move_warp_type.rs  player_viewport_type.rs  sage_star_type.rs  set_player_viewport_reducer.rs  star_table.rs  update_fleet_pos_reducer.rs  update_star_reducer.rs
galactic-rs/sage-spacetime/server/: Cargo.toml
galactic-rs/sage-spacetime/server/src/: lib.rs  player.rs
galactic-rs/sage-spacetime/server/src/sage/: fleet.rs  mod.rs  star.rs
migrations/: 20250415003600_staratlas-fleet-rentals.down.sql  20250415003600_staratlas-fleet-rentals.up.sql
migrations/sage/: 20250424043500_create_tables.sql
programs/cargo/: Cargo.toml  cargo.json
programs/cargo/src/: lib.rs
programs/crew/: Cargo.toml  crew.json
programs/crew/src/: lib.rs
programs/fleet-rentals/: Cargo.toml  README.md  fleet_rentals.json
programs/fleet-rentals/src/: lib.rs
programs/player-profile/: Cargo.toml  player_profile.json
programs/player-profile/src/: lib.rs
programs/profile-faction/: Cargo.toml  profile_faction.json
programs/profile-faction/src/: lib.rs
programs/sage/: Cargo.toml  sage.json
programs/sage/src/: lib.rs
programs/sage/src/ui/: mod.rs  state.rs  typedefs.rs
scripts/: rentals.sql  rentals_csv.sql
tests/: crew_test.rs  helpers.rs  player_profile_test.rs.bak  sage_test.rs
tests/shared/: constants.rs  helpers.rs
