[package]
name = "staratlas-programs"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
members = [
    "programs/*"
]

[workspace.dependencies]
anchor-gen = "0.3.1"
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "b6b4f11" }

[dev-dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "b6b4f11" }
litesvm = "0.6"
# litesvm-token = { git = "https://github.com/LiteSVM/litesvm", rev = "7e3d9a8" }
solana-sdk = "2.2.1"
spl-associated-token-account-client = "2.0.0"
spl-token = "7.0.0"
staratlas-cargo = { path = "programs/cargo", features = ["no-entrypoint"] }
staratlas-crew = { path = "programs/crew", features = ["no-entrypoint"] }
staratlas-player-profile = { path = "programs/player-profile", features = ["no-entrypoint"] }
staratlas-profile-faction = { path = "programs/profile-faction", features = ["no-entrypoint"] }
staratlas-sage = { path = "programs/sage", features = ["no-entrypoint"] }