[package]
name = "staratlas-programs"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
members = ["crates/*", "programs/*"]

[workspace.dependencies]
anchor-gen = "0.3.1"
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "b6b4f11", features = [
    "derive",
] }
litesvm = "0.6"
solana-sdk = "2.2.1"
staratlas-player-profile = { path = "programs/player-profile", features = [
    "no-entrypoint",
] }
staratlas-sage = { path = "programs/sage", features = ["no-entrypoint"] }

[dev-dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "b6b4f11" }
anyhow = "1.0"
bincode = "2.0"
dotenv = "0.15"
flate2 = "1.1"
litesvm = "0.6"
# litesvm-token = { git = "https://github.com/LiteSVM/litesvm", rev = "7e3d9a8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-account-decoder = "2.2"
solana-client = "2.2"
solana-sdk = "2.2"
spl-associated-token-account-client = "2.0.0"
spl-token = "7.0.0"
staratlas-cargo = { path = "programs/cargo", features = ["no-entrypoint"] }
staratlas-crew = { path = "programs/crew", features = ["no-entrypoint"] }
staratlas-fleet-rentals = { path = "programs/fleet-rentals", features = [
    "no-entrypoint",
] }
staratlas-player-profile = { path = "programs/player-profile", features = [
    "no-entrypoint",
] }
staratlas-profile-faction = { path = "programs/profile-faction", features = [
    "no-entrypoint",
] }
staratlas-sage = { path = "programs/sage", features = ["no-entrypoint"] }
staratlas-starbased-sdk = { path = "crates/starbased-sdk" }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.44", features = ["full"] }
