[package]
name = "sage-game"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
anyhow = { workspace = true }
dotenv = { workspace = true }
common-core = { workspace = true }
futures-util = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
staratlas-sage = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
