[package]
name = "sage-game"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "p2p"
path = "src/bin/p2p.rs"

[dependencies]
anyhow = { workspace = true }
common-core = { workspace = true }
dotenv = { workspace = true }
instant = "0.1"
macroquad = "0.4"
serde_json = { workspace = true }
sqlx = { workspace = true }
staratlas-sage = { workspace = true }
structopt = "0.3.26"
tokio = { workspace = true }

[dev-dependencies]
anchor-lang = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
